added image zoom JS library

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -11,6 +11,7 @@
 <script src="/dist/js/vendor/jekyll-search.min.js?v{{ site.data.version.rev }}"></script>
 <script src="/dist/js/vendor/bootstrap.min.js"></script>
 <script src="/dist/js/vendor/bigfoot.min.js?v{{ site.data.version.rev }}"></script>
+<script src="/dist/js/vendor/zoom.min.js?v{{ site.data.version.rev }}"></script>
 <script src="/dist/js/main.js?v{{ site.data.version.rev }}"></script>
 {% if page.title == 'Search' %}
 <script>
