--- a/_scss/_media.scss
+++ b/_scss/_media.scss
@@ -53,4 +53,10 @@
       padding-right: 10px;
     }
   }
+  .four-oh-four {
+    p.explanation {
+      max-width: calc(100% - 20px);
+      padding: 10px;
+    }
+  }
 }
