--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,7 +24,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <a href="https://github.com/stephenhowells/stephenhowells.net"><i class="icon ion-social-github"></i>Code</a>
+          <a href="https://github.com/stephenhowells/stephenhowells.net"><i class="icon ion-social-github"></i>Source</a>
         </li>
       </ul>
     </div>
