big style change, hot pink accent color

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,12 +19,10 @@
           <a href="/about/">About</a>
         </li>
         <li>
-          <a href="{{ site.url }}/feeds/main.xml">RSS</a>
+          <a href="https://github.com/stephenhowells/stephenhowells.net">Source</a>
         </li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
         <li>
-          <a href="https://github.com/stephenhowells/stephenhowells.net"><i class="icon ion-social-github"></i>Source</a>
+          <a href="{{ site.url }}/feeds/main.xml">RSS</a>
         </li>
       </ul>
     </div>
