--- a/_scss/_footer.scss
+++ b/_scss/_footer.scss
@@ -1,14 +1,14 @@
 footer {
   width: 100%;
   height: $footer-height;
-  background-color: #fafafa;
-  border-top: 1px solid #eaeaea;
+  background-color: #414141;
+  border-top: 0;
   padding-top: 20px;
   i {
     color: $accent-color;
   }
   p, ul {
-    color: $body-font-color;
+    color: $body-bg-color;
     font-size: 0.8em;
     font-family: $date-font;
     margin: 0 auto;
@@ -16,6 +16,9 @@ footer {
     width: auto;
     padding-left: 10px;
     padding-right: 10px;
+    a {
+      color: lighten($accent-color, 35%)
+    }
   }
 
   li {
