Removed Bootstrap 3,  begin implementing Neat 2.0 grid, reorganizing sass files

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,30 +1,22 @@
-<div class="navbar navbar-default navbar-static-top" role="navigation">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-          menu
-      </button>
-      <a class="navbar-brand" href="/">StephenHowells<span>.net</span></a>
-    </div>
-    <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
-        <li>
-          <a href="/archives/">Archives</a>
-        </li>
-        <li>
-          <a href="/search/">Search</a>
-        </li>
-        <li>
-          <a href="/about/">About</a>
-        </li>
-        <li>
-          <a href="https://github.com/stephenhowells/stephenhowells.net">Source</a>
-        </li>
-        <li>
-          <a href="{{ site.url }}/feeds/main.xml">RSS</a>
-        </li>
-      </ul>
-    </div>
+<nav>
+  <div class="brand">
+    <a class="navbar-brand" href="/">StephenHowells<span>.net</span></a>
   </div>
-</div>
+  <ul class="nav navbar-nav">
+    <li>
+      <a href="/archives/">Archives</a>
+    </li>
+    <li>
+      <a href="/search/">Search</a>
+    </li>
+    <li>
+      <a href="/about/">About</a>
+    </li>
+    <li>
+      <a href="https://github.com/stephenhowells/stephenhowells.net">Source</a>
+    </li>
+    <li>
+      <a href="{{ site.url }}/feeds/main.xml">RSS</a>
+    </li>
+  </ul>
+</nav>
