--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -7,9 +7,11 @@
   ga('create', 'UA-54535196-2', 'auto');
   ga('send', 'pageview');
 </script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script
+  src="https://code.jquery.com/jquery-2.2.4.min.js"
+  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+  crossorigin="anonymous"></script>
 <script src="/dist/js/vendor/jekyll-search.min.js?v{{ site.data.version.rev }}"></script>
-<script src="/dist/js/vendor/bootstrap.min.js"></script>
 <script src="/dist/js/vendor/bigfoot.min.js?v{{ site.data.version.rev }}"></script>
 <script src="/dist/js/vendor/zoom.min.js?v{{ site.data.version.rev }}"></script>
 <script src="/dist/js/main.js?v{{ site.data.version.rev }}"></script>
