--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,14 +10,10 @@
   <link rel="apple-touch-icon-precomposed" href="/dist/img/apple-touch-icon.png?v=04" />
   <link href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/6185512/7037372/css/fonts.css" />
-  <link rel="stylesheet" href="/dist/css/vendor/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
   <style>
     {% include main.min.css %}
   </style>
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}" data-proofer-ignore>
   <link rel="alternate" type="application/rss+xml" title="RSS Feed for StephenHowells.net" href="{{ site.url }}/feeds/main.xml" />
-  <!--[if lt IE 9]>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.js"></script>
-  <![endif]-->
 </head>
