Neat grid implementation and Bootstrap removal complete

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,22 +1,24 @@
 <nav>
-  <div class="brand">
-    <a class="navbar-brand" href="/">StephenHowells<span>.net</span></a>
+  <div class="nav">
+    <div class="logo">
+      <a class="nav-logo" href="/">StephenHowells<span>.net</span></a>
+    </div>
+    <ul>
+      <li>
+        <a href="/archives/">Archives</a>
+      </li>
+      <li>
+        <a href="/search/">Search</a>
+      </li>
+      <li>
+        <a href="/about/">About</a>
+      </li>
+      <li>
+        <a href="https://github.com/stephenhowells/stephenhowells.net">Source</a>
+      </li>
+      <li>
+        <a href="{{ site.url }}/feeds/main.xml">RSS</a>
+      </li>
+    </ul>
   </div>
-  <ul class="nav navbar-nav">
-    <li>
-      <a href="/archives/">Archives</a>
-    </li>
-    <li>
-      <a href="/search/">Search</a>
-    </li>
-    <li>
-      <a href="/about/">About</a>
-    </li>
-    <li>
-      <a href="https://github.com/stephenhowells/stephenhowells.net">Source</a>
-    </li>
-    <li>
-      <a href="{{ site.url }}/feeds/main.xml">RSS</a>
-    </li>
-  </ul>
 </nav>
