--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -2,6 +2,10 @@
 @import 'globals';
 @import 'layout';
 @import 'typography';
+@import 'nav';
+@import 'pagination';
+@import 'forms';
 @import 'syntax-highlighting';
 @import '_vendor/bigfoot-number';
 @import '_vendor/img-zoom';
+@import 'media';
