--- a/_scss/_forms.scss
+++ b/_scss/_forms.scss
@@ -2,6 +2,7 @@
   border: 1px solid $accent-color;
   padding: 6px;
   width: 100%;
+  border-radius: $radius;
   &:focus {
       outline: none;
   }
