--- a/_scss/_layout.scss
+++ b/_scss/_layout.scss
@@ -68,6 +68,7 @@ article {
   p code, li code {
     border: 1px #e0e0e0 solid;
     padding: 4px;
+    border-radius: $radius;
   }
 
   blockquote {
@@ -94,8 +95,6 @@ article {
   display: block;
   text-align: center;
   margin-bottom: 120px;
-  height: 1px;
-  line-height: 1px;
 }
 
 .search {
@@ -163,7 +162,7 @@ img {
 footer {
   @include grid-container;
   height: $footer-height;
-  background-color: #414141;
+  background-color: $body-font-color;
   padding-top: 16px;
   p, ul {
     @include page-box;
