--- a/_scss/_pagination.scss
+++ b/_scss/_pagination.scss
@@ -1,33 +1,26 @@
 .pager {
   @include grid-container;
-  margin-bottom: 20px;
-  li {
-    list-style: none;
+  margin-bottom: 80px;
+  ul {
+    @include page-box;
+    padding-left: 10px;
+    padding-right: 10px;
+    li {
+      list-style: none;
+      a {
+        background: $body-font-color;
+        padding: 14px;
+        margin: 0;
+        border-radius: $radius;
+      }
+    }
   }
-}
-
-.pager li > a {
-  background: mix(#fafafa, $accent-color, 94%);
-  border: 1px solid $accent-color;
-  padding: 0;
-  margin: 0;
-  height: 40px;
 }
 
 .pager li > a.previous-link {
-  border-left: 0;
   float: left;
-  i {
-    padding-right: 8px;
-    padding-left: 30px;
-  }
 }
 
 .pager li > a.next-link {
-  border-right: 0;
   float: right;
-  i {
-    padding-left: 8px;
-    padding-right: 30px;
-  }
 }
