--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,8 +6,8 @@
   <meta name="description" content="{{ site.description }}">
   <meta name="format-detection" content="telephone=no">
   <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
-  <link rel="shortcut icon" href="/dist/img/favicon.ico?v=03" />
-  <link rel="apple-touch-icon-precomposed" href="/dist/img/apple-touch-icon.png?v=04" />
+  <link rel="shortcut icon" href="/dist/img/favicon.ico?v{{ site.data.version.rev }}" />
+  <link rel="apple-touch-icon-precomposed" href="/dist/img/apple-touch-icon.png?v{{ site.data.version.rev }}" />
   <link href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/6185512/7037372/css/fonts.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
