--- a/_scss/_forms.scss
+++ b/_scss/_forms.scss
@@ -1,5 +1,6 @@
 .search-query {
-  border: 1px solid $accent-color;
+  border: 1px solid #eaeaea;
+  background: #fafafa;
   padding: 6px;
   width: 100%;
   border-radius: $radius;
