--- a/_scss/_typography.scss
+++ b/_scss/_typography.scss
@@ -240,3 +240,11 @@ footer {
 .archives h1 {
   margin-bottom: 72px;
 }
+
+.reversefootnote {
+  padding: 3px 4px 0px 4px;
+  vertical-align: -.2rem;
+  font-size: .95rem;
+  line-height: 0px;
+  color: lighten($body-font-color, 30%);
+}
