--- a/_scss/_nav.scss
+++ b/_scss/_nav.scss
@@ -1,23 +1,30 @@
 nav {
   @include grid-container;
+
   .nav {
     @include page-box;
+
     padding-left: 10px;
     padding-right: 10px;
     margin: 60px 0;
-    border-bottom: 1px solid #eaeaea;
+    border-bottom: 4px solid $body-font-color;
+
     .logo {
       display: inline-block;
       float: left;
+
       .nav-logo {
         padding: 0 12px 0 0;
       }
     }
+
     ul {
       float: right;
+
       li {
         list-style: none;
         display: inline-block;
+
         a {
           padding: 0 10px;
         }
