mobile footer tweak

--- a/_scss/_pagination.scss
+++ b/_scss/_pagination.scss
@@ -13,6 +13,7 @@
       list-style: none;
 
       a {
+        font-family: $headline-fonts;
         background: $body-font-color;
         padding: 14px;
         margin: 0;
