--- a/_scss/_media.scss
+++ b/_scss/_media.scss
@@ -1,4 +1,9 @@
 @media (max-width: 599px) {
+  .page-wrap {
+    min-height: 150%;
+    margin-bottom: -150px;
+  }
+
   blockquote,
   li,
   p {
@@ -57,6 +62,18 @@
     ul {
       padding-left: 20px;
       padding-right: 20px;
+    }
+  }
+
+  footer {
+    height: 150px;
+    
+    p {
+      padding: 0 20px;
+    }
+
+    ul {
+      padding: 0 20px;
     }
   }
 }
